@@ -6,7 +6,7 @@ import org.jabref.build.xjc.XjcPlugin
 import org.jabref.build.xjc.XjcTask
 
 // to update the gradle wrapper, execute
-// ./gradlew wrapper --gradle-version=4.4.1 --distribution-type=bin
+// ./gradlew wrapper --gradle-version=6.0 --distribution-type=bin
 
 buildscript {
     repositories {
@@ -17,18 +17,16 @@ buildscript {
 
 plugins {
     id 'application'
-    id 'com.gradle.build-scan' version '3.0'
     id "com.simonharrer.modernizer" version '1.8.0-1'
-    id 'me.champeau.gradle.jmh' version '0.4.8'
+    id 'me.champeau.gradle.jmh' version '0.5.0'
     //id 'net.ltgt.errorprone' version '0.8.1'
     id 'com.github.ben-manes.versions' version '0.27.0'
     id 'org.javamodularity.moduleplugin' version '1.5.0'
     id 'org.openjfx.javafxplugin' version '0.0.8'
-    id 'org.beryx.jlink' version '2.16.2'
+    id 'org.beryx.jlink' version '2.16.4'
 }
 
-// use the gradle build scan feature: https://scans.gradle.com/get-started
-buildScan { termsOfServiceUrl = 'https://gradle.com/terms-of-service'; termsOfServiceAgree = 'yes' }
+gradle.startParameter.showStacktrace = org.gradle.api.logging.configuration.ShowStacktrace.ALWAYS
 
 apply plugin: 'java'
 apply plugin: 'application'
@@ -44,8 +42,10 @@ apply from: 'eclipse.gradle'
 
 group = "org.jabref"
 version = "5.0.0"
-sourceCompatibility = 12
-targetCompatibility = 12
+
+sourceCompatibility = 13
+targetCompatibility = 13
+
 mainClassName = "$moduleName/org.jabref.JabRefLauncher"
 
 // TODO: Ugly workaround to temporarily ignore build errors to dependencies of latex2unicode
@@ -111,6 +111,8 @@ dependencies {
     compile 'org.apache.pdfbox:fontbox:2.0.17'
     compile 'org.apache.pdfbox:xmpbox:2.0.17'
 
+    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.7'
+
     compile group: 'org.apache.tika', name: 'tika-core', version: '1.22'
 
     // required for reading write-protected PDFs - see https://github.com/JabRef/jabref/pull/942#issuecomment-209252635
@@ -126,7 +128,7 @@ dependencies {
     //compile "org.libreoffice:ridl:6.2.3"
     //compile "org.libreoffice:unoil:6.2.3"
 
-    compile 'io.github.java-diff-utils:java-diff-utils:4.0'
+    compile 'io.github.java-diff-utils:java-diff-utils:4.5-SNAPSHOT'
     compile 'info.debatty:java-string-similarity:1.2.1'
 
     antlr3 'org.antlr:antlr:3.5.2'
@@ -138,6 +140,11 @@ dependencies {
     compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.5.1'
 
     compile 'org.postgresql:postgresql:42.2.8'
+
+    compile ('com.oracle.ojdbc:ojdbc10:19.3.0.0') {
+        // causing module issues
+        exclude module: 'oraclepki'
+    }
 
     compile ('com.google.guava:guava:28.1-jre') {
         // TODO: Remove this as soon as https://github.com/google/guava/issues/2960 is fixed
@@ -159,7 +166,7 @@ dependencies {
     compile 'org.controlsfx:controlsfx:11.0.0'
 
     compile 'org.jsoup:jsoup:1.12.1'
-    compile 'com.konghq:unirest-java:3.1.03'
+    compile 'com.konghq:unirest-java:3.1.04'
 
     compile 'org.slf4j:slf4j-api:2.0.0-alpha1'
     compile group: 'org.apache.logging.log4j', name: 'log4j-jcl', version: '3.0.0-SNAPSHOT'
@@ -169,7 +176,7 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-SNAPSHOT'
     annotationProcessor group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-SNAPSHOT'
 
-    compile 'de.undercouch:citeproc-java:1.0.1'
+    compile 'de.undercouch:citeproc-java:2.0.0'
 
     compile group: 'jakarta.activation', name: 'jakarta.activation-api', version: '1.2.1'
     compile group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: '2.3.2'
@@ -196,22 +203,21 @@ dependencies {
     }
 
 
-    testCompile 'io.github.classgraph:classgraph:4.8.52'
-    testCompile 'junit:junit:4.12'
+    testCompile 'io.github.classgraph:classgraph:4.8.53'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
     testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.5.2'
     testCompile 'org.junit.platform:junit-platform-launcher:1.5.2'
 
-    testCompile 'net.bytebuddy:byte-buddy-parent:1.10.2'
+    testCompile 'net.bytebuddy:byte-buddy-parent:1.10.3'
     testRuntime group: 'org.apache.logging.log4j', name: 'log4j-core', version: '3.0.0-SNAPSHOT'
     testRuntime group: 'org.apache.logging.log4j', name: 'log4j-jul', version: '3.0.0-SNAPSHOT'
     testCompile 'org.mockito:mockito-core:3.1.0'
     //testCompile 'com.github.tomakehurst:wiremock:2.24.1'
     testCompile 'org.xmlunit:xmlunit-core:2.6.3'
     testCompile 'org.xmlunit:xmlunit-matchers:2.6.3'
-    testCompile 'com.tngtech.archunit:archunit-junit5-api:0.11.0'
+    testCompile 'com.tngtech.archunit:archunit-junit5-api:0.12.0'
     //testRuntime 'com.tngtech.archunit:archunit-junit5-engine:0.11.0'
-    testCompile 'com.tngtech.archunit:archunit-junit5-api:0.11.0'
+    testCompile 'com.tngtech.archunit:archunit-junit5-api:0.12.0'
     testCompile "org.testfx:testfx-core:4.0.15-alpha"
     testCompile "org.testfx:testfx-junit5:4.0.15-alpha"
 
@@ -402,14 +408,16 @@ run {
             "--add-opens", "javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
             "--add-opens", "javafx.base/com.sun.javafx.binding=com.jfoenix",
             "--add-opens", "javafx.graphics/com.sun.javafx.stage=com.jfoenix",
-            "--add-opens", "javafx.base/com.sun.javafx.event=com.jfoenix"
+            "--add-opens", "javafx.base/com.sun.javafx.event=com.jfoenix",
+            '--add-exports', 'com.oracle.truffle.regex/com.oracle.truffle.regex=org.graalvm.truffle'
 
     // TODO: The following code should have the same affect as the above one, but doesn't work for some reason
     // https://github.com/java9-modularity/gradle-modules-plugin/issues/89
     moduleOptions {
         addExports = [
                 'javafx.controls/com.sun.javafx.scene.control' : 'org.jabref',
-                'org.controlsfx.controls/impl.org.controlsfx.skin' : 'org.jabref'
+                'org.controlsfx.controls/impl.org.controlsfx.skin' : 'org.jabref',
+                'com.oracle.truffle.regex/com.oracle.truffle.regex' : 'org.graalvm.truffle'
         ]
 
         addOpens = [
@@ -432,31 +440,50 @@ localization.script = 'scripts/syncLang.py'
 // Test tasks
 test {
     useJUnitPlatform {
-        excludeTags 'DatabaseTest', 'FetcherTest', 'GUITest', 'org.jabref.testutils.category.FetcherTest', 'org.jabref.testutils.category.GUITest'
+        excludeTags 'DatabaseTest', 'FetcherTest', 'GUITest'
     }
 
     testLogging {
         // set options for log level LIFECYCLE
-        events "failed"
+        // for debugging tests: add "STANDARD_OUT", "STANDARD_ERROR"
+        events = ["FAILED"]
         exceptionFormat "full"
     }
 }
 
 task databaseTest(type: Test) {
-    useJUnit {
-        includeCategories 'org.jabref.testutils.category.DatabaseTest'
+    useJUnitPlatform {
+        includeTags 'DatabaseTest'
+    }
+
+    testLogging {
+        // set options for log level LIFECYCLE
+        events = ["FAILED"]
+        exceptionFormat "full"
     }
 }
 
 task fetcherTest(type: Test) {
-    useJUnit {
-        includeCategories 'org.jabref.testutils.category.FetcherTest'
+    useJUnitPlatform {
+        includeTags 'FetcherTest'
+    }
+
+    testLogging {
+        // set options for log level LIFECYCLE
+        events = ["FAILED"]
+        exceptionFormat "full"
     }
 }
 
 task guiTest(type: Test) {
-    useJUnit {
-        includeCategories 'org.jabref.testutils.category.GUITest'
+    useJUnitPlatform {
+        includeTags 'GUITest'
+    }
+
+    testLogging {
+        // set options for log level LIFECYCLE
+        events = ["FAILED"]
+        exceptionFormat "full"
     }
 }
 
@@ -471,9 +498,24 @@ tasks.withType(Test) {
     reports.html.destination = file("${reporting.baseDir}/${name}")
 }
 
+task jacocoMergePrep() {
+    doFirst {
+        // Ignore failures of tests
+        tasks.withType(Test) {
+            ignoreFailures = true
+        }
+    }
+}
+test.mustRunAfter jacocoMergePrep
+databaseTest.mustRunAfter jacocoMergePrep
+fetcherTest.mustRunAfter jacocoMergePrep
+
 task jacocoMerge(type: JacocoMerge) {
-    executionData file("$buildDir/jacoco/test.exec"), file("$buildDir/jacoco/databaseTest.exec"), file("$buildDir/jacoco/fetcherTest.exec")
-    dependsOn test, databaseTest, fetcherTest
+    executionData files(
+            "$buildDir/jacoco/test.exec",
+            "$buildDir/jacoco/databaseTest.exec",
+            "$buildDir/jacoco/fetcherTest.exec").filter { it.exists() }
+    dependsOn jacocoMergePrep, test, databaseTest, fetcherTest
 }
 
 jacocoTestReport {
@@ -613,7 +655,7 @@ if (OperatingSystem.current().isWindows()) {
     tasks.jpackageImage.doLast {
         copy {
             from("${projectDir}/buildres/windows") {
-                include "jabref.json", "JabRefHost.bat", "JabRefHost.ps1"
+                include "jabref.json", "jabref-chrome.json", "JabRefHost.bat", "JabRefHost.ps1"
             }
             into "$buildDir/distribution/JabRef"
         }
